--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
